<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Contact Manager</string>
    <string name="hnt_et_name">Contact Name</string>
    <string name="hnt_et_mobile">Phone Number</string>
    <string name="str_photo">Photo</string>
    <string name="str_btn_add">Add Contact</string>
    <string name="str_btn_list">Contacts List</string>

</resources>
